--- a/macro.cfg
+++ b/macro.cfg
@@ -10,9 +10,6 @@ gcode:
   PID_CALIBRATE HEATER=heater_bed TARGET=60
   SAVE_CONFIG
 
-#Cura start g-code
-# START_PRINT EXTRUDER_TEMP={material_print_temperature_layer_0} BED_TEMP={material_bed_temperature_layer_0}
-
 # All start end g-codes:
 # https://github.com/rootiest/zippy_guides/blob/main/guides/macros.md#slicer-settings
 
@@ -21,27 +18,26 @@ gcode:
 gcode:
     {% set BED_TEMP = params.BED_TEMP|default(55)|float %}
     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(220)|float %}
-    {% set FIRST_LAYER_TEMP = params.FIRST_LAYER_TEMP|default(220)|float %}
-    M140 S{BED_TEMP}
-    M104 S180
 
+    M140 S{BED_TEMP}
     G28 ; Home all axes
     G92 E0 ; Reset Extruder
     
     M190 S{BED_TEMP}    
     BED_MESH_CALIBRATE
-    # Set and wait for nozzle to reach temperature    
+    M109 S{EXTRUDER_TEMP}
 
     G1 Z2.0 F3000 ;Move Z Axis up 
-    G1 X-2.1 Y20 Z0.28 F5000.0 ;Move to start position 
-    M109 S{EXTRUDER_TEMP} ;Wait for nozzle temp to stabilize 
-    G1 X-2.1 Y145.0 Z0.28 F1500.0 E15 ;Draw the first line 
-    G1 X-2.4 Y145.0 Z0.28 F5000.0 ;Move to side a little 
-    G1 X-2.4 Y20 Z0.28 F1500.0 E30 ;Draw the second line 
+    G1 X1.1 Y20 Z0.3 F5000.0 ;Move to start position 
+    
+    G1 X1.1 Y145.0 Z0.3 F1500.0 E15 ;Draw the first line 
+    G1 X1.4 Y145.0 Z0.3 F5000.0 ;Move to side a little 
+    G1 X1.4 Y20 Z0.3 F1500.0 E30 ;Draw the second line 
     G92 E0  ;Reset Extruder 
     G1 E-1.0000 F1800 ;Retract a bit 
     G1 Z2.0 F3000 ;Move Z Axis up 
-    G1 E0.0000 F1800
+    G1 X5 Y20 Z0.3 F5000.0 ; Move over to prevent blob squish
+    #G1 E0.0000 F1800
     #BED_MESH_PROFILE LOAD=default
 
 [gcode_macro FILAMENT_LOAD]
