--- a/printer.cfg
+++ b/printer.cfg
@@ -23,9 +23,9 @@ enable_pin: !PC3
 microsteps: 64
 rotation_distance: 40
 endstop_pin: !PA5
-position_endstop: -14
-position_min: -14
-position_max: 220
+position_endstop: -6
+position_min: -6
+position_max: 230
 homing_speed: 50
 
 [stepper_y]
@@ -55,7 +55,7 @@ homing_retract_dist: 2.0
 
 [extruder]
 max_extrude_only_distance: 100.0
-pressure_advance: 0.063
+pressure_advance: 0.08475
 step_pin: PB4
 dir_pin: PB3
 enable_pin: !PC3
@@ -66,11 +66,10 @@ filament_diameter: 1.750
 heater_pin: PA1
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC5
-control: pid
-# tuned for stock hardware with 200 degree Celsius target
-pid_Kp: 27.142
-pid_Ki: 1.371
-pid_Kd: 134.351
+control = pid
+pid_kp = 29.897
+pid_ki = 1.620
+pid_kd = 137.899
 min_temp: 0
 max_temp: 260
 
@@ -78,11 +77,10 @@ max_temp: 260
 heater_pin: PB2
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC4
-control: pid
-# tuned for stock hardware with 70 degree Celsius target
-pid_kp: 66.371
-pid_ki: 0.846
-pid_kd: 1301.702
+control = pid
+pid_kp = 61.755
+pid_ki = 0.575
+pid_kd = 1658.121
 min_temp: 0
 max_temp: 100
 
@@ -122,7 +120,7 @@ sensor_pin: ^PC14
 control_pin: PC13
 x_offset: -24.0
 y_offset: -13.0
-z_offset: 2.350
+z_offset: 2.365 #Golden plate
 speed: 20
 samples: 2
 pin_move_time: 0.4
@@ -139,7 +137,7 @@ z_hop_speed: 5
 speed: 120
 horizontal_move_z: 5
 mesh_min: 30,30         # Need to handle head distance with cr-touch (bl_touch)
-mesh_max: 210, 210       # Max probe range
+mesh_max: 200, 200       # Max probe range
 probe_count: 5,5
 algorithm: bicubic
 fade_start: 1
